# rust-bencode

./: Cargo.toml
src/: bencode.rs  streaming.rs  util.rs
